--- a/src/user/templates/creditRequestEditorConfirm.tpl.html
+++ b/src/user/templates/creditRequestEditorConfirm.tpl.html
@@ -121,8 +121,11 @@
             </div>
         </div>
         
+        <hr class="mt-5" />
+        <h4 class="mb-5">Прикрепленные изображения</h4>
+        
         <div class="form-group row align-items-center">
-            <label for="photo-upload" class="col-12 col-sm-2 col-form-label col-form-label-lg">Прикрепленные изображения</label>
+            <label for="photo-upload" class="col-12 col-sm-2 col-form-label col-form-label-lg">Загрузить</label>
             <div class="col-12 col-sm-10 form-inline justify-content-between">
                 <div class="custom-file">
                     <input class="custom-file-input" type="file" name="file" id="photo-upload" multiple>
@@ -150,6 +153,8 @@
                 }
             ?>
         </div>
+        
+        <hr class="my-5" />
         
         <div class="form-group row">
             <div class="offset-sm-2 col-sm-10 d-flex justify-content-between">
