--- a/src/user/templates/parts/header.tpl.html
+++ b/src/user/templates/parts/header.tpl.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="title" content="<?=Singleton::getInstance('HTMLMetaManager')->getTitle()?>" />
+    <? if (Singleton::getInstance('HTMLMetaManager')->getDescription()) { ?>
+        <meta name="description" content="<?=Singleton::getInstance('HTMLMetaManager')->getDescription()?>" />
+        <description><?=Singleton::getInstance('HTMLMetaManager')->getDescription()?></description>
+    <? } ?>
     <title><?=Singleton::getInstance('HTMLMetaManager')->getTitle()?></title>
 
     <!-- Bootstrap core CSS -->
