--- a/src/user/templates/parts/header.tpl.html
+++ b/src/user/templates/parts/header.tpl.html
@@ -50,28 +50,28 @@
 </head>
 <body class="d-flex flex-column h-100">
     
-<nav class="navbar navbar-light fixed-top bg-light navbar-expand-md">
-    <a class="navbar-brand" href="/"><?=DEFAULT_MAILER?></a>
+<nav class="navbar navbar-light fixed-top navbar-expand-lg">
+    <div class="container">
+        <a class="navbar-brand logo" href="/">Фин<span class="d-none d-sm-inline">ансовый </span>Ресурс</a>
 
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-            <li class="nav-item">
-                <a class="nav-link" href="<?=CommonUtils::makeUrl('controlPanel')?>">Личный Кабинет</a>
-            </li>
-        </ul>
-        <div class="form-inline">
-        <? if (SecurityManager::isAuth()) { ?>
-            <strong><?=htmlspecialchars(SecurityManager::getUser()->getName())?></strong>
-            <a class="btn btn-link my-2 my-md-0" href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGOUT))?>" role="button">выйти</a>
-        <? } else { ?>
-            <a class="btn btn-link my-2 my-md-0" href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGIN, 'return' => $curl))?>" role="button">войти на сайт</a>
-            <a class="btn btn-link my-2 my-md-0" href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_START, 'return' => $curl))?>" role="button">регистрация</a>
-        <? } ?>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+            <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="<?=CommonUtils::makeUrl('controlPanel')?>">Личный Кабинет</a>
+                </li>
+            </ul>
+            <div class="form-inline ml-auto mt-2 mt-md-0">
+            <? if (SecurityManager::isAuth()) { ?>
+                <strong><?=htmlspecialchars(SecurityManager::getUser()->getName())?></strong>
+                <a class="btn btn-link my-2 my-md-0" href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGOUT))?>" role="button">выйти</a>
+            <? } else { ?>
+                <a class="btn button-login mr-4 my-2 my-md-0" href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_LOGIN, 'return' => $curl))?>" role="button">войти на сайт</a>
+                <a class="btn button-registration btn-outline-warning my-2 my-md-0" href="<?=CommonUtils::makeUrl('userRegister', array('action' => userRegister::ACTION_START, 'return' => $curl))?>" role="button">регистрация</a>
+            <? } ?>
+            </div>
         </div>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Показать / скрыть меню"><span class="navbar-toggler-icon"></span></button>    
     </div>
-    
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>    
 </nav>
     
