--- a/src/user/templates/parts/pageFooter.tpl.html
+++ b/src/user/templates/parts/pageFooter.tpl.html
@@ -1,16 +1,28 @@
-<footer class="footer mt-auto py-3 border-top bg-light">
+<footer class="footer mt-auto py-3 bg-footer">
     <div class="container">
         <div class="row">
-            <div class="col">
-                <a href="/static/about.html" class="mr-2">О проекте</a>
-                <a href="/static/privacy-policy.html" class="mr-2">Политика обработки персональных данных</a>
-                <a href="/static/contacts.html" class="mr-2">Контакты</a>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
+                <div class="contact-footer pr-5">
+                    Услуги по содействую в получении финансовых услуг предоставляет ООО «МИКРОКРЕДИТНАЯ КОМПАНИЯ ФИНАНСОВЫЙ ИНСТРУМЕНТ» <span class="text-nowrap">ИНН 7702460837</span> <span class="text-nowrap">ОГРН 1197746003113</span> / 105318, Москва г, Щербаковская ул, дом 3, этаж 11, комната 2а / <span class="text-nowrap">р/с 40701810600000000646</span> в <span class="text-nowrap">АО «РАЙФФАЙЗЕНБАНК» г. Москва</span> <span class="text-nowrap">БИК 044525700</span>
+                </div>
             </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col small text-muted">
-                Услуги по содействую в получении финансовых услуг предоставляет ООО «МИКРОКРЕДИТНАЯ КОМПАНИЯ ФИНАНСОВЫЙ ИНСТРУМЕНТ» <span class="text-nowrap">ИНН 7702460837</span> <span class="text-nowrap">ОГРН 1197746003113</span> / 105318, Москва г, Щербаковская ул, дом 3, этаж 11, комната 2а / <span class="text-nowrap">р/с 40701810600000000646</span> в <span class="text-nowrap">АО «РАЙФФАЙЗЕНБАНК» г. Москва</span> <span class="text-nowrap">БИК 044525700</span>
-            </div>
+			
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4 d-flex">
+                <div class="d-flex align-items-center">
+                    <a class="logo-footer pt-3 pb-3" href="/">Финансовый Ресурс</a>	  
+                </div>
+            </div>			
         </div>
     </div>
 </footer>
+<div class="footer-menu">
+ <div class="container">
+        <div class="row">
+            <div class="col flex-column flex-sm-row d-flex justify-content-start justify-content-sm-end">
+                <a href="/static/about.html" class="mr-5">О проекте</a>
+                <a href="/static/privacy-policy.html" class="mr-5">Политика обработки персональных данных</a>
+                <a href="/static/contacts.html" class="mr-5">Контакты</a>
+            </div>
+        </div>
+    </div>
+</div>
