--- a/src/user/templates/main.scss
+++ b/src/user/templates/main.scss
@@ -1,1 +1,236 @@
 @import "/var/www/credit/src/base/main.scss";
+
+@font-face { font-family: 'Bender'; src: url('Bender-Light.eot'); src: local('Bender Light'), local('Bender-Light'), url('Bender-Light.eot?#iefix') format('embedded-opentype'), url('Bender-Light.woff2') format('woff2'), url('Bender-Light.woff') format('woff'), url('Bender-Light.ttf') format('truetype'); font-weight: 300; font-style: normal; }
+@font-face { font-family: 'Bender'; src: url('Bender-LightItalic.eot'); src: local('Bender Light Italic'), local('Bender-LightItalic'), url('Bender-LightItalic.eot?#iefix') format('embedded-opentype'), url('Bender-LightItalic.woff2') format('woff2'), url('Bender-LightItalic.woff') format('woff'), url('Bender-LightItalic.ttf') format('truetype'); font-weight: 300; font-style: italic; }
+
+@font-face {
+    font-family: 'Bender';
+    src: url('Bender-Bold.eot');
+    src: local('Bender Bold'), local('Bender-Bold'),
+        url('Bender-Bold.eot?#iefix') format('embedded-opentype'),
+        url('Bender-Bold.woff2') format('woff2'),
+        url('Bender-Bold.woff') format('woff'),
+        url('Bender-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Bender';
+    src: url('Bender-BoldItalic.eot');
+    src: local('Bender Bold Italic'), local('Bender-BoldItalic'),
+        url('Bender-BoldItalic.eot?#iefix') format('embedded-opentype'),
+        url('Bender-BoldItalic.woff2') format('woff2'),
+        url('Bender-BoldItalic.woff') format('woff'),
+        url('Bender-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Bender';
+    src: url('Bender-BlackItalic.eot');
+    src: local('Bender Black Italic'), local('Bender-BlackItalic'),
+        url('Bender-BlackItalic.eot?#iefix') format('embedded-opentype'),
+        url('Bender-BlackItalic.woff2') format('woff2'),
+        url('Bender-BlackItalic.woff') format('woff'),
+        url('Bender-BlackItalic.ttf') format('truetype');
+    font-weight: 900;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Bender';
+    src: url('Bender-Italic.eot');
+    src: local('Bender Italic'), local('Bender-Italic'),
+        url('Bender-Italic.eot?#iefix') format('embedded-opentype'),
+        url('Bender-Italic.woff2') format('woff2'),
+        url('Bender-Italic.woff') format('woff'),
+        url('Bender-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Bender';
+    src: url('Bender.eot');
+    src: local('Bender'),
+        url('Bender.eot?#iefix') format('embedded-opentype'),
+        url('Bender.woff2') format('woff2'),
+        url('Bender.woff') format('woff'),
+        url('Bender.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Bender';
+    src: url('Bender-Black.eot');
+    src: local('Bender Black'), local('Bender-Black'),
+        url('Bender-Black.eot?#iefix') format('embedded-opentype'),
+        url('Bender-Black.woff2') format('woff2'),
+        url('Bender-Black.woff') format('woff'),
+        url('Bender-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
+html { 
+    
+    .ui-widget { font-family: 'Bender'; font-weight: normal; font-style: normal; color:#090909; }
+    
+    body { 
+        
+        font-family: 'Bender';
+        font-weight: normal;
+        font-style: normal;
+	color:#090909;
+        background: #efefef;
+        
+        > nav {
+ 
+            background: #ffc000;
+            min-height:60px;            
+            
+            a.logo { background: url(images/logo.png) no-repeat left center;padding-left: 3.3125rem;font-size: 1.5rem;}
+            
+            .button-login, .button-registration {  font-weight: 900; padding-left: 1.9375rem; padding-right: 1.9375rem; font-size: 0.875rem; }
+            
+            .button-login { background:#424242; color:#fff; }
+            .button-registration { color: #090909; border: 1px solid #ffffff82; }            
+            
+            .button-registration:hover { color: #090909; border: 1px solid #ffffff82; }
+            .button-login:hover { color:#eee; }            
+            
+        }
+        
+        main {
+            padding-top: 5rem;
+            background:#efefef;
+            
+            .btn-yellow { border-style: solid; border-width: 5px; border-color: rgb(255, 255, 255); background-color: rgb(255, 192, 0); color: rgb(255, 255, 255); line-height: 1.2; font-size:1.125rem; text-align: center; border-radius: 30px; padding: 0.85rem 2rem; font-weight: 900; }
+            
+            .slide { 
+                
+                background: url(images/main_slide.jpg) no-repeat top center; 
+                background-size: cover;
+                color:#fff; 
+                font-size: 1.25rem; 
+                margin-bottom: 0!important; 
+                border-radius: 0; 
+                
+                h1 { position:relative; color: #ffc000; font-size: 3.75rem; padding-bottom: 1.6875rem; }
+                h1:before { content:'';width: 95px;height: 1px;position: absolute;bottom: 0;left: 0;background: #ffc000; }
+                h4 { font-size: 1.875rem; margin-top: 2.6875rem; margin-bottom: 2.6875rem; }
+
+                .btn-slide {font-size:1.375rem;border-radius: 30px;min-width: 255px;padding: .72rem .72rem;margin-top: 3.0625rem;}
+                .btn-slide:hover{}
+                
+                @include media-breakpoint-up(xl) {
+                    
+                    min-height: 780px; 
+                    
+                }
+                
+            }
+            
+            #priem {                
+	
+                margin-top: -5rem;
+
+                .priem-bg { border-radius: 25px; background-color: #fff; box-shadow: 0px 0px 32px 0px rgba(151, 145, 177, 0.35); padding-bottom: 2.5rem; }
+
+                .priem-item {
+                    
+                    font-weight: 600; min-height: 287px; justify-content: center; display: flex; flex-direction: column; text-align: center; padding: 0rem 3.1rem;
+                    
+                    .img-priem { margin-bottom: 1.5rem; }
+                    p { margin-bottom:0rem; }
+                    h2 { font-size:1.5rem;font-weight: 900;margin-bottom: 1.5625rem; }
+                    
+                }
+
+                .btn-priem { min-width: 256px; margin-top: -1.8125rem; }              
+
+                @include media-breakpoint-down(lg) {
+                    
+                    
+                    margin-top: -1rem;
+                
+                }
+
+                @include media-breakpoint-down(xs) {
+                    
+                    margin-top: -0.1rem;                    
+                    .priem-bg { border-radius: 0; }
+                
+                }      
+                
+                
+            }
+            
+            #about { 
+
+                padding-top: 3.75rem;position: relative;margin-top: 3.75rem;background:#efefef; 
+
+                .question { position: absolute;right: 0;top: 0px;display: flex;justify-content: center;width: 417px;align-items: flex-end;padding-bottom: 3rem;font-weight: 900;background: url(images/question.png) top center no-repeat;height: 250px;font-size: 3rem; }
+                .about-img { margin-right: 1.875rem; }
+                .about-content { max-width: 320px; }
+
+                .about-wrap { }
+                .btn-about { max-width: 255px; width: 100%; position: absolute; bottom: 355px; left: 0; }
+                .ab-1 { padding-left: 3.125rem; padding-bottom: 6.875rem; }
+                .ab-2 { padding-left: 15.625rem; padding-bottom: 5.3125rem; }
+                .ab-3 { padding-left: 28.125rem; padding-bottom: 6.875rem; }
+                .ab-4 { padding-left: 15.625rem; padding-bottom: 6.25rem; }
+
+                .about-number { padding-right: 1.75rem; }
+                .about-number span{ font-size: 1.125rem; background: #fff; padding: 5px; border-radius: 50%; width: 35px; height: 35px; display: flex; justify-content: center; align-items: center; font-weight: 900; }
+                .about-item span { position: relative; }
+                .about-item span::after { content: ''; position: absolute; color:#c3c3c3; top: 35px; left: 17px; border: 2px dashed; border-radius: 0 0 0 100%; border-right: 0; border-top: 0; }
+                .about-item:nth-child(1) span::after { width: 185px; height: 197px; }
+                .about-item:nth-child(2) span::after { width: 185px; height: 174px; }
+                .about-item:nth-child(3) span::after { left: unset; right: 35px; top: 18px; width: 185px; height: 205px; border-radius: 100% 0 0 0; border: 2px dashed; border-right: 0; border-bottom: 0; }
+                .about-item:nth-child(4) span::after { left: unset; right: 35px; top: -184px; width: 127px; height: 205px; }
+
+                .ab-1:hover .about-number span::after , .ab-2:hover .about-number span::after, .ab-3:hover .about-number span::after , .ab-4:hover .about-number span::after { color:#ffc000; cursor:pointer; } 
+
+                @include media-breakpoint-down(xs) {
+
+                    .question { font-size:2rem; }
+                    .about-img { margin-right: 0rem; margin-bottom: 1rem; }
+                    .about-number { padding-right: 0rem; margin-bottom: 1rem; }
+                    .about-content { dispaly: block; }
+
+                }     
+
+                @include media-breakpoint-down(lg) {
+                    #about { margin-top:0rem; }
+                    .question { position: unset; top: unset; right: unset; width: 100%; margin-bottom: 2rem; }
+                    .about-item span::after { content:none; }
+                    .ab-1 , .ab-2, .ab-3 , .ab-4 { padding-left: 1rem; padding-right: 1rem; padding-bottom: 0rem; margin-bottom: 3rem; }
+                    .about-content { max-width: 100%; }
+                    .btn-about { position: unset; bottom: unset; left: unset; margin: 0 auto; margin-bottom: 2rem; }
+                }
+
+            }            
+            
+        }
+        
+        main#main-page { padding-top: 60px; }
+        
+        .bg-footer {background:#2c2c2c;border-top: 4px solid #ffc000;}
+        .contact-footer { color: #fff; font-size: 14px; padding-bottom: 2.0625rem; padding-top: 1.875rem; }
+        .footer-menu {padding:1rem 0rem; background: white; }
+        .footer-menu a{color:#090909;font-weight:900;}
+        .footer-menu a:hover{}
+        .logo-footer:hover {color:#eee;text-decoration:none;}
+        .logo-footer {color: #ffffff;background: url(images/logo_footer.png) no-repeat left center;padding-left: 3.3125rem;font-size: 1.5rem;}        
+        
+    }
+    
+}
+
+
+
+            
