--- a/src/admin/templates/categoryEditorAdd.tpl.html
+++ b/src/admin/templates/categoryEditorAdd.tpl.html
@@ -39,6 +39,15 @@
             </div>
         </div>
         
+        <div class="form-group row align-items-top">
+            <div class="col-12 offset-sm-2 col-sm-10">
+                <div class="form-check">
+                    <input type="checkbox" name="pledge" value="1" class="form-check-input" id="pledge" <?=$form->getValue('pledge')?' checked="checked"':''?> />
+                    <label class="form-check-label" for="pledge">для данной категории обязательно необходим залог</label>
+                </div>
+            </div>
+        </div>
+        
         <div class="form-group row align-items-center">
             <div class="col-12 offset-sm-2 col-sm-10 d-flex justify-content-between">
                 <button type="submit" class="btn btn-lg btn-success mr-2 mb-2">создать</button>
