--- a/src/admin/templates/categoryList.tpl.html
+++ b/src/admin/templates/categoryList.tpl.html
@@ -22,6 +22,7 @@
         <thead>
             <tr>
                 <th scope="col">Название</th>
+                <th scope="col" class="text-center">Залог</th>
                 <th scope="col">&nbsp;</th>
             </tr>
         </thead>
@@ -29,6 +30,7 @@
         <? foreach($list as $item) { ?>
         <tr id="id-<?=$item->getId()?>">
             <td class="handle align-middle"><?=htmlspecialchars($item->getName())?></td>
+            <td class="handle align-middle text-center"><?=$item->isPledge()?'+':'-'?></td>
             <td class="align-middle">
                 <? if (SecurityManager::isAllowedAction(AclAction::EDIT_ACTION, AclContext::CATEGORY_ID)) { ?><a href="<?=CommonUtils::makeUrl('categoryEditor', array('action' => CommandContainer::ACTION_UPDATE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="far fa-edit"></i></a><? } ?>
                 <? if (SecurityManager::isAllowedAction(AclAction::DELETE_ACTION, AclContext::CATEGORY_ID)) { ?><a href="<?=CommonUtils::makeUrl('categoryEditor', array('action' => CommandContainer::ACTION_DELETE, 'id' => $item->getId(), 'return' => $curl))?>"><i class="far fa-trash-alt"></i></a><? } ?>
